adding josh branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <!-- HEADER END  -->
 
     <!-- AVATAR -->
-
+        <div id ='avatar box'>
+            <div id='avatar_inner_box'>
+                <img src='avatar'>
+                <div> Sample Username</div>
+            </div>
+        </div>
     <!-- AVATAR END  -->
 
     <!-- SETTINGS -->
