adding avatar box

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <!-- HEADER END  -->
 
     <!-- AVATAR -->
-        <div id ='avatar box'>
-            <div id='avatar_inner_box'>
+        <div id ='avatar_box'>
                 <img src='avatar'>
                 <div> Sample Username</div>
-            </div>
         </div>
     <!-- AVATAR END  -->
 
