--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head></head>
+    <link href="footer.css" rel="stylesheet">
 </html>
 <body>
     <!-- HEADER -->
@@ -16,7 +17,12 @@
     <!-- SETTINGS END -->
 
     <!-- FOOTER -->
-
+    <div id="footer">
+        <div class="buttons"></div>
+        <div class="buttons"></div>
+        <div class="buttons"></div>
+        <div class="buttons"></div>
+    </div>
     <!-- FOOTER END -->
 
 </body>
