adding css changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel='stylesheet' href='josh.css'>
+    </head>
 </html>
 <body>
     <!-- HEADER -->
@@ -9,7 +11,7 @@
 
     <!-- AVATAR -->
         <div id ='avatar_box'>
-                <img src='avatar'>
+                <img id='avatar_image' src='avatar.jpg'>
                 <div> Sample Username</div>
         </div>
     <!-- AVATAR END  -->
