--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel='stylesheet' href='josh.css'>
+        <link rel='stylesheet' href='avatar.css'>
     </head>
 </html>
 <body>
