--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head> <link rel="stylesheet" href="cristian.css"></head>
 </html>
 <body>
     <!-- HEADER -->
+    <div id ="header">
+        <div id ="box1">
+        </div>
+        <div id ="box2"></div>
+        
+    </div>
 
     <!-- HEADER END  -->
 
