--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+            <link href="app2.css" rel="stylesheet">
+            
+    </head>
 </html>
 <body>
     <!-- HEADER -->
@@ -12,6 +15,11 @@
     <!-- AVATAR END  -->
 
     <!-- SETTINGS -->
+<div id="settings_menu">
+    <div id="settings_content"></div>
+
+
+</div>
 
     <!-- SETTINGS END -->
 
