EPIC SETTINGS MENU BAHAAHR

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
     <!-- SETTINGS -->
 <div id="settings_menu">
+    <h3>SETTINGS ARE HERE</h3>
     <div id="settings_content"></div>
-
-
 </div>
 
     <!-- SETTINGS END -->
