--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
     <!-- FOOTER -->
     <div id="footer">
-        <div class="buttons"></div>
-        <div class="buttons"></div>
-        <div class="buttons"></div>
-        <div class="buttons"></div>
+        <div class="buttons">YEET</div>
+        <div class="buttons">YEET</div>
+        <div class="buttons">YEET</div>
+        <div class="buttons">YEET</div>
     </div>
     <!-- FOOTER END -->
         <script>src='avatar.js'</script>
